--- a/gb/nsc413_5.md
+++ b/gb/nsc413_5.md
@@ -1,4 +1,16 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/fxikhp286/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fxikhp286/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716613.md#1" target="_blank">美前官员：中共陷困境 川普不需要贸易协议</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716613.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1180494134-1-150x120.jpg" align ="left"></a>美国前国务院资深官员周三（12月11日）撰文说，总统川普（特朗普）不需要现在达成协议、给陷入困境中国共产党续命。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 6:35 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716629.md#1" target="_blank">禁自带骨灰盒 湖南殡仪馆自卖逾万元一个</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716629.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1-12-150x120.jpg" align ="left"></a>日前，湖南宁乡市殡仪馆禁止死者家属自带骨灰盒，推销殡仪馆标价14,880元（人民币，下同）的骨灰盒。死者家属如果不买殡仪馆的骨灰盒，殡仪馆就不提供相关服务。网民纷纷指责殡仪馆：大发死人财。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 4:54 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716496.md#1" target="_blank">一汽夏利退出市场  中国自主品牌再折戟</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716496.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Tianjin_Xiali_TJ7101-150x120.jpg" align ="left"></a>中国天津一汽夏利汽车股份有限公司（一汽夏利）近日完成全部股权划转，在20多年间，这一中国自主品牌在中共政府政策的主导下从鼎盛到衰退，至今完全退出市场。在中国，自主品牌产品面临经营、业绩和国际声誉的问题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 4:49 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716656.md#1" target="_blank">疫情扩大 哈尔滨再有13名学生感染布病</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716656.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2008/06/806120829481093-150x120.jpg" align ="left"></a>中国农科院兰州兽医研究所11月下旬爆发布鲁氏菌病（布病），并导致至少96人被感染后，同属中国农科院的哈尔滨兽医研究所再有13名学生感染布病。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 4:12 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716409.md#1" target="_blank">贵州贫困县举债22亿元 造山寨“紫禁城”</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716409.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/111-150x120.gif" align ="left"></a>贵州一个国家级贫困县举债22亿（人民币，下同）、历时4年，打造一座“山寨版紫禁城”，官媒称，该县债务达400多亿元。网民质疑工程有官商中饱私囊。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 3:55 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11714077.md#1" target="_blank">甘肃省前610主任庞波被举报到海外</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11714077.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/610-1-150x120.jpg" align ="left"></a>甘肃省原“610”主任庞波在任职期间操纵甘肃各地的监狱、劳教所、洗脑班等场所对法轮功学员进行疯狂的折磨和摧残，现被举报到明慧网。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 3:11 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716403.md#1" target="_blank">美官员：感佩法轮功学员直面中共邪恶的勇气</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716403.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1-10-150x120.jpg" align ="left"></a>12月10日国际人权日，美国国际宗教自由委员会（USCIRF）委员加里?鲍尔（Gary Bauer）表示， 法轮功遭到中共“尤为严重”的镇压，但是法轮功学员面对中共邪恶的勇气令他“震撼”。
+
+鲍尔10日在美国国会举行的“全球反迫害制止中共暴行 声援退党大潮”的研讨会上表达了这一观点。
+
+他也表示，中共看似强大，但中共的解体可能会很快发生。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 2:01 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716484.md#1" target="_blank">孔子学院再遭挫 比利时荷兰语大学终止合作</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716484.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/VUB_campus_Etterbeek-150x120.jpg" align ="left"></a>比利时荷语“布鲁塞尔自由大学”（VUB）周二（12月10日）决定，自2020年6月起，将不再延长与孔子学院的合作。VUB认为，自由研究处于风险中，此外，孔子学院中方院长被比利时安全部指控从事间谍活动，也促使VUB取消合作。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 1:54 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716317.md#1" target="_blank">传国家京剧院副院长袁慧琴交辞职申请</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716317.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Untitled-7-150x120.jpg" align ="left"></a>知名京剧演员姜亦珊去世后，微信圈疯传国家京剧院副院长袁慧琴已经提交请辞申请，并主动投案表示愿意接受调查。但袁仍然参加了国家大剧院近日的两场活动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 12:55 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716284.md#1" target="_blank">新闻自由恶化 中共今年监禁记者数全球第一</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716284.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/01/1312231117082320-150x120.jpg" align ="left"></a>位于纽约的保护记者委员会（The Committee to Protect Journalists）周三（12月11日）表示，中国是2019年全球监禁新闻工作者人数最多的国家，关押了至少48名记者。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 12:49 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11715995.md#1" target="_blank">绿党民调：近7成台湾民众对中共反感</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11715995.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/e44195dcfba381b7b1b223dec4e7e74caa-150x120.jpg" align ="left"></a>2020总统、立委选举进入倒数1个月，绿党11日公布最新民调，民进党总统蔡英文以48.9%支持度，大幅度领先国民党总统候选人韩国瑜的19.7%、亲民党宋楚瑜的8.3%；至于对中共的好感度方面，民调显示反感者高达近七成，有好感者则不到一成，显示民众不认同与中共靠拢。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 12:39 AM							</td></tr>
@@ -22,16 +34,8 @@
 
 10月30日，美国联邦调查局（.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 3:27 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11714790.md#1" target="_blank">纳瓦罗：川普将决定是否12月加税和签协议</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11714790.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/09/dc6cd22e23d13b51e1356b98cdb468d5-150x120.jpg" align ="left"></a>美国是否在12月15日对中国商品加征新关税备受各界关注。针对媒体关于美中正计划推迟新关税的报导，白宫贸易顾问彼得?纳瓦罗（Peter Navarro）周二（12月10日）表示，总统川普（特朗普）将是就关税和美中贸易协议做出最终决定的人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 3:11 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11714822.md#1" target="_blank">受贿逾六千万 陕西省委前秘书长获刑14年</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11714822.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/11/Bn1-1-150x120.jpg" align ="left"></a>落马一年多后，中共陕西省委前常委、省委秘书长钱引安日前以受贿6313万余元，一审被判处有期徒刑14年。陆媒曾披露，钱引安被查与秦岭北麓违规建别墅问题有关联。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 2:58 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11715093.md#1" target="_blank">美军披露新型公路机动导弹 可反制中共威胁</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11715093.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/HXS6WC35VFGDTJB4QWT4N5C3CU-150x120.jpg" align ="left"></a>美国陆军部长麦卡锡（Ryan Mccarthy）在12月7日披露了正在开发中、可藉由发射车机动发射的公路机动导弹（road-mobile missile），它们将大幅提高陆军的防御能力。这些中程导弹将可部署在第二岛链或南海周边国家，以反制中共的军事威胁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 2:46 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/5/n11701463.md#1" target="_blank">走出华为的工程师：华为是全人类的噩梦(下)</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/5/n11701463.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1153137465-150x120.jpg" align ="left"></a>华为员工李洪元事件，揭开了华为利用公权力构陷员工入狱的黑幕，引发外界关注。一名华为离职工程师向大纪元表示，华为就是中共的一个权力部门，它是结合商业、间谍、情报、偷窃的军工复合体。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 2:33 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11715043.md#1" target="_blank">川普宣布人权日 美将严罚侵犯人权行为</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11715043.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/15afdc099c349571_ttl7dayQdY_trump-600x400-1-150x120.jpg" align ="left"></a>在纪念国际人权日之际，美国总统川普（特朗普）宣布12月10日为人权日和12月15日为人权法案日，以及本周为人权周。美国政府也在当日宣布对来自6个国家、至少20个被指侵犯人权的个人实施经济制裁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 2:24 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11714821.md#1" target="_blank">外媒：与华为签约换贸易 中共施压法罗群岛</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11714821.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/5G-150x120.jpg" align ="left"></a>丹麦《贝林时报》报导称，中共驻丹麦大使向法罗群岛施压，要求其与华为公司签署5G合同，否则双方一项重要贸易协定将被取消。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 1:36 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11714779.md#1" target="_blank">被限制出境 陈秋实：政权会更迭 天快亮了</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11714779.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/11-38-150x120.jpg" align ="left"></a>12月10日，曾“肉身翻墙”到香港记录反送中活动的大陆律师陈秋实，被天津公安局限制出境。陈秋实告诉自己：不要气馁，天快亮了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 12:15 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11712075.md#1" target="_blank">美中国专家出书 揭秘中共招募间谍手段（中）</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11712075.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/edited221-1-600x400-2-150x120.jpg" align ="left"></a>最近中共特工王立强投诚澳洲，引发外界对中共情报系统在海外广泛活动的关注。美国国会及行政当局中国委员会（CECC）办公室副主任彼得?马蒂斯（Peter Mattis, 中文名孟沛德）和马特?巴西（Matt Brazil）近日出书，揭露中共情报工作的历史、现状及手段。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 12:12 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11714683.md#1" target="_blank">香港客户遭政审 大陆沿海小商户经济受损</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11714683.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_Hkg4639783-150x120.jpg" align ="left"></a>自6月以来，香港反送中运动持续延烧，北京采取各种方式阻止真相传入大陆。近日传出，大陆沿海多家小商户遭到警方严查，被询问香港客户的政治立场，如果支持抗争者就会被控“港独”遭到封杀，这导致许多小商户的经济损失。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 11:45 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11715794.md#1" target="_blank">台旅行社勾结人头协会 5千陆公务员非法来台</a><br></h3>?国安恐再现漏洞？台北地检署指出，新北市水资源经济发展协会等12个机构，涉嫌勾结20余家非甲种旅行社业者，假造短期专业交流文件，协助5千名中国公务人员及其亲友来台，但实际目的尚在调查中；刑事局今日（11日）兵分5路搜索，并约谈相关10人，预计晚间移送复讯。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 2:36 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11715631.md#1" target="_blank">内蒙古通辽市高速路上大客车侧翻 致53伤</a><br></h3>12月11日上午10时5分左右，内蒙古通辽市高速G2511高速公路甘旗卡段124km处，发生一起大客车侧翻事故，导致53人受伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 7:15 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11714983.md#1" target="_blank">天津街道书记贪3亿囚18年 每天躺钱上睡觉</a><br></h3>上月25日，天津市滨海新区寨上街道前工委书记陈玉慧，因贪污、受贿等多罪，被判处有期徒刑18年、罚款140万元人民币（下同）。其案涉及金额高达3.17亿元。陈玉慧被指每天躺在钱上睡觉，向他行贿的恶势力头目因其太贪而绝交。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 4:49 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11714843.md#1" target="_blank">河南一村民用三轮摩托载6人坠崖 6死1伤</a><br></h3>12月10日下午，河南省巩义市发生一起三轮摩托车意外坠崖伤亡事件，致6人死亡1人受伤，伤者尚未脱离生命危险。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 1:23 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/fxikhp286/djy/blob/master/gb/nsc413_5.md#1<br><a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/fxikhp286/djy/blob/master/gb/nsc413_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_5.htm">http://www.epochtimes.com/gb/nsc413_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
