--- a/gb/nsc413_2.md
+++ b/gb/nsc413_2.md
@@ -24,10 +24,10 @@
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11714551.md#1" target="_blank">盘点2020年最大的中国“灰犀牛”</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11714551.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-929521586-150x120.jpg" align ="left"></a>年末已至，回顾今年的中国经济，若选用三个关键词来描述的话，莫过于中美贸易战、经济下行和金融风险。与捷报频传的美国经济截然相反，中共最近发布的各种数据和报告，不但没带来任何能稳住经济信心的好消息，反而释放出不祥的讯号，揭示出一头头的“灰犀牛”正冲撞而来。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 2:19 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11719819.md#1" target="_blank">港媒：中共六招严控企业 国进民退忧虑加剧</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11719819.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/02/1401312212562068-150x120.jpeg" align ="left"></a>中共面对经济危机及贸易战冲击，加大了对企业的控制。有港媒盘点了中共控制企业的招数，而中共此举也导致了企业家国进民退的忧虑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 2:07 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11719692.md#1" target="_blank">消息：中方承诺买500亿美产品 换取关税推迟</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11719692.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_19E4VE-150x120.jpg" align ="left"></a>消息人士透露，美国总统川普（特朗普）与北京达成一项有限版（第一阶段）贸易协议，该协议将削减部分对中国商品的现行关税税率，并取消定于周日生效的新关税，而中方则承诺在2020年购买500亿美元美国农产品，以及加强知识产权保护。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 10:33 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11720853.md#1" target="_blank">台《情工法》三读 间谍最重无期徒刑终身追诉</a><br></h3>立法院院会13日三读通过《国家情报工作法》修正案，除了把窃取营业秘密资讯纳入侦防工作重点之外，也大幅提高刑责，若替外国势力或境外敌对势力以刺探、搜集、窃取、泄露、交付情报来源，将从7年以上有期徒刑调整为无期徒刑或10年以上有期徒刑，并可终身追诉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 2:23 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11721310.md#1" target="_blank">【世界十字路口】会客室：债务风暴席卷中国</a><br></h3>曾为世界500强企业之一的“天津物产集团”，12月12日宣布完成11亿美元的债务重整，相当于宣告债券违约，引发国际媒体竞相关注中国债务危机。中国债务问题会不会对香港、台湾等地带来影响？中国地方政府的债务问题又有多严峻？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 11:37 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11720210.md#1" target="_blank">经常接触生禽无防护 湖南菜场小贩染布病</a><br></h3>继中国农科院兰州兽医研究所至少96人被感染布鲁氏菌病（布病）、哈尔滨兽医研究所13名学生感染布病后，湖南永州一菜场小贩也被发现感染布病。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 4:24 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11720497.md#1" target="_blank">山东一男子持刀伤人 致2死1伤</a><br></h3>12月11日晚山东济宁发生一起持刀伤人案件，3名受害者中2人身亡，另外1人受伤，嫌疑人逃离现场后畏罪自杀，被送往医院抢救。经初查，嫌疑人与其中1名受害者有感情纠纷。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 3:42 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11719940.md#1" target="_blank">中共经济会议结束 七常委出席不见王岐山</a><br></h3>为期3天的中共中央经济工作会议在北京举行，该会议承认经济下行压力加大。当天，习近平、李克强等中共七常委出席会议，但独缺中共国家副主席王岐山。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 12:11 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11719825.md#1" target="_blank">每日三退声明精选（2019/12/12）</a><br></h3>自从今年年初我出国时偶然观看了由神韵艺术团表演的多姿多彩的中华传统舞蹈节目后，我的心态有了大幅度的转变，如果这样的中华文化传承是共产党口中的邪教，那么共产党自己又能是什么呢？后来我回国后又翻墙阅读了《九评共产党》的文章，字字句句都深刻揭示了共产党本质，给了我极大的震撼，让我深刻的意识到共产党对我们真正中国传统文化的残害是多么的严重，我现在身在邪党阵营中，只能.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 10:32 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/alzmt2820/djy/blob/master/gb/nsc413_2.md#1<br><a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/alzmt2820/djy/blob/master/gb/nsc413_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_2.htm">http://www.epochtimes.com/gb/nsc413_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
