--- a/gb/nsc413_2.md
+++ b/gb/nsc413_2.md
@@ -1,4 +1,10 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/alzmt2820/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/alzmt2820/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/alzmt2820/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/alzmt2820/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/alzmt2820/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11721940.md#1" target="_blank">莱特希泽：美中或明年1月签协议 川习不出席</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11721940.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1MY8OG-150x120.jpg" align ="left"></a>美国贸易代表罗伯特·莱特希泽（Robert Lighthizer）周五（12月13日）告诉记者，美中希望在明年1月的第一个星期签署第一阶段贸易协议。他透露，协议将不会由川普（特朗普）总统和习近平主席签署。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 6:36 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11721958.md#1" target="_blank">中方是否兑现协议承诺 川普两幕僚说要观察</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11721958.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/000_1G17D9-150x120.jpg" align ="left"></a>周五（12月13日），美中均宣布达成第一阶段协议，中方承诺增购大量美国商品，美方则取消12月15日的原定关税。白宫首席经济顾问拉里·库德洛（Larry Kudlow）对中美达成的贸易协议持谨慎乐观态度。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 6:18 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11721901.md#1" target="_blank">【名家专栏】美国终于有了正确的对华政策</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11721901.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/05-flag--150x120.jpg" align ="left"></a>1947年2月，美国时任总统杜鲁门决定帮助希腊政府反击该国共产党的叛乱。他告诉美国人民，希腊内战是一场测试美国能否抵御国际共产主义的重要考验。杜鲁门声称反共，但他却忽略了世界第一人口大国中更严重的共产主义威胁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 5:59 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11721849.md#1" target="_blank">中国经济高成本低效率 学者：脱实向虚</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11721849.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/03/1411251109221366-150x120.jpg" align ="left"></a>随着中共中央经济工作会议的结束，中国经济走势再次引发关注，有学者深入分析指出中国经济高成本低效率，造成企业负担重，中共没有扎扎实实地发展实体经济，实体经济投资和企业效率低下，整体经济持续低迷。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 5:47 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11721564.md#1" target="_blank">【新闻看点】北京贸协重大让步 美中脱钩持续</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11721564.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/692de107928fdd54b3d630cb0116890c-150x120.jpg" align ="left"></a>美国贸易代表办公室周五发声明表示，同中方达成了一项“历史性的、且可执行性的协议”。北京作出重大让步，使美中贸易谈判向前进了一步。但外界认为，美中最终的结局仍然无力改变：美中脱钩已经成了必然。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 5:38 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11721754.md#1" target="_blank">美中达成贸易协议 清华学者：中共做出妥协</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11721754.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1148901571-1-150x120.jpg" align ="left"></a>经过长达一年多的谈判后，美中双方终于达成了可执行的、第一阶段贸易协议。清华大学前讲师吴强对此表示，中共做出妥协。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 5:31 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11721807.md#1" target="_blank">上海嘉里粮油公司突发大火 浓烟高达百米</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11721807.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2e241e93be2d9a9f7be8595e65f8f837-150x120.jpg" align ="left"></a>上海鑫德物流有限公司仓库火灾刚过去一个月，又一家上海公司的仓库发生特大火灾。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 4:50 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11721565.md#1" target="_blank">【新闻看点】美高官：北京以敌意回应美善意</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11721565.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/01-dave-150x120.jpg" align ="left"></a>12月12日，美国国务院亚太助理国务卿史达伟（也有译作史迪威，David Stilwell）表示，几十年来，美国全方位帮助中国发展和实现现代化，却养肥了中共这头“白眼狼”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 4:43 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11718013.md#1" target="_blank">制裁迫害法轮功者 美国政要支持采取行动</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11718013.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/011-flag-150x120.jpg" align ="left"></a>近日，包括国会议员在内的多位美国政要向大纪元记者表示， 支持川普政府对中共迫害法轮功者实施制裁，对其拒发签证、冻结财产。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 3:49 AM							</td></tr>
@@ -20,14 +26,8 @@
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11720718.md#1" target="_blank">川普祝贺约翰逊胜选 期待英美大笔贸易协议</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11720718.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1188198531-150x120.jpg" align ="left"></a>美国总统川普（特朗普）庆祝约翰逊的压倒性胜利，他说这会引发英美之间“大笔”贸易协定。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 9:23 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11720980.md#1" target="_blank">浸淫公安18年 陕西咸阳政法委前书记落马</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11720980.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/ed65ff9c4214675936d6380fda4a5a30-150x120.jpg" align ="left"></a>12月13日，已经退休近7年的中共咸阳市委前常委、政法委前书记郭中秋被调查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 8:04 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11720875.md#1" target="_blank">河北省关闭全部P2P平台</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11720875.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/0cfc7f1dfaca21a50d3e63edb3e4984a-150x120.jpg" align ="left"></a>12月13日，中共河北省有关部门发布公告称，全省开展P2P业务的平台没有一家符合规定，所以予以全部关闭。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 7:17 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11720513.md#1" target="_blank">依赖土地财政 大陆13城市卖地收入破千亿</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11720513.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2010/12/1012280806162320_1-150x120.jpg" align ="left"></a>截至11月底，大陆今年土地出让收入超过1000亿元（人民币，下同）城市已达到13个，刷新同期纪录。如果按照目前态势，今年全国土地出让收入有望逼近7万亿元，再度创下历史新高。显示大陆各地对土地财政的依赖依旧不减。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 6:37 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11720459.md#1" target="_blank">海风：中国官场迎来“辞职潮”</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11720459.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/01/1401182039212039-150x120.jpg" align ="left"></a>继富豪移民潮、资金外逃潮、民企倒闭潮、外企脱逃潮、网贷平台爆雷潮、房企倒闭潮、员工失业潮、民工返乡潮、银行倒闭潮之后，中国又迎来了一波官场“辞职潮”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 5:53 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11720180.md#1" target="_blank">【投书】自由门使用小技巧</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11720180.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1102181505392192-600x400-150x120.jpg" align ="left"></a>最近一段时间以来，由于经常上youtube看爆料革命，造成自由门和无界软件的链接十分困难，有时候一天都不能链接，很是苦恼。也是出于苦恼的原因，个人似乎找到了平稳使用自由门的小技巧，请各位试试看。方法如下：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 5:38 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11720677.md#1" target="_blank">川普分享与里根的合照 有何含意？</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11720677.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/05/01-20180323-Trump-SamiraBouaou-8329-1-2-150x120.jpg" align ="left"></a>美国总统川普（特朗普）于周四（12月12日）在社交媒体上分享了一张他与前总统里根（Ronald Reagan）的合照，但没有提供任何文字说明，其用意引起人们的揣测。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 5:14 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11719537.md#1" target="_blank">【世事关心】罗宾逊：美资本市场是中共生命线</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11719537.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/111111-150x120.jpg" align ="left"></a>贸易是美中关系中一个抢眼的问题。他们能应付贸易战之类的问题吗？是的，这对他们有些痛苦，但是，他们能，他们能一直玩下去。看看那些事情起落吧。你知道的，你没有看到他们有任何惊慌失措。他们只是把货币贬值或者做些其它事情来抵消关税的负面影响。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 4:34 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11721169.md#1" target="_blank">【珍言真语】专访刘慧卿：林郑是千古罪人</a><br></h3>香港动荡6个月了。前立法会议员、民主党主席刘慧卿认为，这都是林郑月娥造成的。希望中央政府诺守“中英联合声明”与《基本法》。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 3:56 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11720853.md#1" target="_blank">台《情工法》三读 间谍最重无期徒刑终身追诉</a><br></h3>立法院院会13日三读通过《国家情报工作法》修正案，除了把窃取营业秘密资讯纳入侦防工作重点之外，也大幅提高刑责，若替外国势力或境外敌对势力以刺探、搜集、窃取、泄露、交付情报来源，将从7年以上有期徒刑调整为无期徒刑或10年以上有期徒刑，并可终身追诉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 2:23 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11721310.md#1" target="_blank">【世界十字路口】会客室：债务风暴席卷中国</a><br></h3>曾为世界500强企业之一的“天津物产集团”，12月12日宣布完成11亿美元的债务重整，相当于宣告债券违约，引发国际媒体竞相关注中国债务危机。中国债务问题会不会对香港、台湾等地带来影响？中国地方政府的债务问题又有多严峻？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 11:37 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11720210.md#1" target="_blank">经常接触生禽无防护 湖南菜场小贩染布病</a><br></h3>继中国农科院兰州兽医研究所至少96人被感染布鲁氏菌病（布病）、哈尔滨兽医研究所13名学生感染布病后，湖南永州一菜场小贩也被发现感染布病。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 4:24 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/alzmt2820/djy/blob/master/gb/nsc413_2.md#1<br><a href="https://github.com/alzmt2820/djy/blob/master/gb/nsc413_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/alzmt2820/djy/blob/master/gb/nsc413_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_2.htm">http://www.epochtimes.com/gb/nsc413_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
