--- a/gb/news2008_2.md
+++ b/gb/news2008_2.md
@@ -6,7 +6,7 @@
 
 淋巴腺鼠疫、败血性鼠疫、肺鼠疫都是鼠疫，都是感染鼠疫杆菌，只是表现不同。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 11:27 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/11/18/n11663244.md#1" target="_blank">完全信赖的组织：“因为信任，所以简单”</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/11/18/n11663244.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2010/12/1012031009512184-150x120.jpg" align ="left"></a>在公司中，用人不疑，疑人不用，对所有的人，完全信赖，所以组织简单，效率卓越。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 3:08 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11713424.md#1" target="_blank">世界最亮！日环球影城《水晶之约》照亮圣诞节</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11713424.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/ecfe533e27bdb6dde4cf77d15519c2a6-150x120.jpg" align ="left"></a>圣诞节的欢乐浪漫气氛是很多人的最爱，2019年的世界各地的欢庆活动紧锣密鼓的展开了，热情的各出奇招的吸引游客前来观赏；而今年大阪日本环球影城则安排了一个明亮耀人的水晶圣诞节，再搭配圣誔主题秀《水晶之约》，打造一个全球最亮的圣誔节。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 2:48 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11713424.md#1" target="_blank">世界最亮！日环球影城《水晶之约》照亮圣诞节</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11713424.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/ecfe533e27bdb6dde4cf77d15519c2a6-150x120.jpg" align ="left"></a>圣诞节的欢乐浪漫气氛是很多人的最爱，2019年的世界各地的欢庆活动紧锣密鼓的展开了，热情的各出奇招的吸引游客前来观赏；而今年大阪日本环球影城则安排了一个明亮耀人的水晶圣诞节，再搭配圣诞主题秀《水晶之约》，打造一个全球最亮的圣诞节。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 2:48 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11713476.md#1" target="_blank">嫌弃涂鸦墙？她画出活的净化空气的“苔藓涂鸦”</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11713476.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/909d2387b0eb34ebd15f1d37d2bc5a91-150x120.jpg" align ="left"></a>一听到在墙面上作画，人们可能马上想起用油漆喷的涂鸦，但有人认为不美观，而且油漆会散发有毒化学物质；不过，现在有一种涂鸦画却大受欢迎，因为它不但美观，而且它是活的会生长、它会呼吸、而且还可以净化空气的‘苔藓涂鸦’。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 2:24 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/9/n11710860.md#1" target="_blank">欢迎系绳竉物 德州夫妇带1600磅竉物“踢馆”</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/9/n11710860.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/c0dab4d28dc04d022de707136b7f7187-150x120.jpg" align ="left"></a>在美国德州一对夫妇决定带一只独特的竉物出门，到一家新开幕的竉物商店佩特科（Petco）去逛逛，因为商店打出广告说：“所有绑上绳带的竉物，都欢迎进来参观！”实际上是他们想要去‘踢馆’，看看那家店真会欢迎这只与众不同的庞然大物吗？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 2:13 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/9/n11710898.md#1" target="_blank">遛狗奇人一次带20只还能大合照 怎么办到的？</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/9/n11710898.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/67abcffb0cf74c84a405ce92e0699261-150x120.jpg" align ="left"></a>有养过狗狗的人都知道，狗狗一天最少也要出门放风2～3次，但是住在城市里的人怎么办呢？因此有些爱狗而又忙碌的人会把狗狗托给专业的遛狗人，据国外媒体报导，在美国遛狗已经是一门热门产业，我们来看看一位纽约的遛狗专家有多厉害！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 2:05 PM			</td></tr>
